# scratchrelaxtv

./: .bumpversion.cfg  .editorconfig  .gitignore  .mergify.yml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Pipfile  README.md  azure-pipelines.yml  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
extract-hcl-vars/: __init__.py  cli.py
requirements/: ci.txt  lint.txt  pip.txt  release.txt
scratchrelaxtv/: __init__.py  cli.py  logging.conf
tests/: .env.1  main.tf  main_missing.tf  modstub.tf  template.sh  template_vars.tf  terraform.1.tfvars  terraform.tfvars  test_scratchrelaxtv.py  variables.tf  variables_missing.tf
