[metadata]
name = scratchrelaxtv
description = Terraform developer tool to extract variables and generate variables.tf files.
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
version = 0.6.14
author = YakDriver
author_email = projects@plus3it.com
url = https://github.com/YakDriver/scratchrelaxtv
license = Apache Software License 2.0
platforms = 
  Linux
  Windows
  Darwin
classifiers = 
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  License :: OSI Approved :: Apache Software License
  Operating System :: MacOS :: MacOS X
  Operating System :: POSIX :: Linux
  Operating System :: Microsoft :: Windows
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: Implementation :: CPython
  Programming Language :: Python :: Implementation :: PyPy
  Topic :: Utilities

[options]
install_requires = 
packages = scratchrelaxtv
include_package_data = True

[options.entry_points]
console_scripts = 
  scratchrelaxtv = scratchrelaxtv.cli:main
  relaxtv = scratchrelaxtv.cli:main

[bdist_wheel]
universal = 1

[tool:pytest]
mock_use_standalone_module = true
norecursedirs = 
  .git
  .tox
  .env
  __pycache__
  dist
  build
  htmlcov
python_files = 
  test_*.py
  *_test.py
  tests.py
addopts = 
  -rxEfsw
  --strict
  --doctest-modules
  --doctest-glob=\*.md
  --tb=short

[flake8]
exclude =
    .tox,
    .git,
    __pycache__,
    .eggs,
    *.egg,
    build,
    dist,
    htmlcov,
    */static/salt/formulas/*
ignore = FI15,FI16,FI17,FI5,D107,W503,W504
